examples/test/testpolicy672.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy672
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key7: value38
      key3: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value12
          key8: value39
      podSelector:
        matchLabels:
          key34: value7
